# Make-Them-Slow-or-Fast

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1  nexus.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/workflows/: Build Artifacts.yml  Build.yml  CMake SKSE Setup.yml
Configuration/: ExclusionHint.json  MainHint.json  Make_Them_Slow_or_Fast.json
Configuration/my config/: Make_Them_Slow_or_Fast.json
cmake/: automatic-github-workflow-setup.cmake  compress-artifact.cmake  skse-fomod.cmake
contrib/Distribution/Common/: Make_Them_Slow_or_Fast.json
contrib/Distribution/data/skse/plugins/: MTSOFConfig_schema.json  Make_Them_Slow_or_Fast.json
contrib/Distribution/data/skse/plugins/Make Them Slow or Fast/presets/: Default.json
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml
include/: DataManager.h  Events.h  FilePtrManager.h  ImGuiIDGuard.h  ImGuiTreeNodeGuard.h  PCH.h  Settings.h  UI.h  logging.h  reload.h  timeit.h  utils.h
include/SKSE-MCP/: SKSEMenuFramework.h
include/SKSEMenuFramework/: SKSEMenuFramework.h
json/python/: MTSOFConfigModel.py
src/: DataManager.cpp  Events.cpp  FilePtrManager.cpp  ImGuiIDGuard.cpp  ImGuiTreeNodeGuard.cpp  Main.cpp  PCH.cpp  Settings.cpp  UI.cpp  logging.cpp  reload.cpp  timeit.cpp
